--- a/index.html
+++ b/index.html
@@ -7,34 +7,60 @@
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="acssets/css/styles.css">
     <link href="acssets/css/main.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="acssets/css/styles.css">
     <title>Travel Goals</title>
 </head>
 <body>
-<header>
-    <div id="page-logo">
-        <a href="/index.html">Travel Goals</a>
-    </div>
-    <nav>
-        <ul>
-            <li><a href="/places.html">Destinations</a></li>
-            <li><a href=""></a>About</li>
-        </ul>
-    </nav>
-</header>
-<main>
-    <section id="hero">
-        <div id="hero-content">
-            <h1>Joe's Travel Page</h1>
-            <p>Let's explore the world together!</p>
-            <a href="/places.html">Discover places</a>
+    <header>
+        <div id="page-logo">
+            <a href="/index.html">Travel Goals</a>
         </div>
-    </section>
-</main>
-<footer>
+        <nav>
+            <ul>
+                <li><a href="/places.html">Destinations</a></li>
+                <li><a href="">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div id="hero">
+            <div id="hero-content">
+                <h1>Joe's Travel Page</h1>
+                <p>Let's explore the world together!</p>
+                <a href="/places.html">Discover places</a>
+            </div>
+        </div>
 
-</footer>
+        <div id="highlights">
+            <h2>Highlights</h2>
+            <ul id="destinations-ul">
+                <li class="destinations">
+                    <img src="/acssets/img/cities/miami.jpg" alt="Miami streets on sunny day">
+                    <p>Miami <strong>USA</strong></p>
+                </li>
+                <li class="destinations">
+                    <img src="/acssets/img/cities/munich.jpg" alt="Munich stadium in winter">
+                    <p>Munich <strong>Germany</strong></p>
+                </li>
+                <li class="destinations">
+                    <img src="/acssets/img/cities/barcelona.jpg" alt="Palm beach in Barcelona">
+                    <p>Barcelona <strong>Spain</strong></p>
+                </li>
+            </ul>
+        </div>
+
+    </main>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.instagram.com/quangbach.1709/"><img src="/acssets/img/icons/insta.png" alt="instagram logo"></a>
+
+            </li>
+            <li>
+                <a href="https://www.facebook.com/bach.quang2004"><img src="/acssets/img/icons/facebook.png" alt="facebook logo"></a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
