--- a/index.html
+++ b/index.html
@@ -2,65 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport">
-    <meta content="ie=edge" http-equiv="X-UA-Compatible">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
-          rel="stylesheet">
-    <link href="acssets/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="acssets/css/styles.css">
-    <title>Travel Goals</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
+<div id="main">
     <header>
-        <div id="page-logo">
-            <a href="/index.html">Travel Goals</a>
-        </div>
         <nav>
-            <ul>
-                <li><a href="/places.html">Destinations</a></li>
-                <li><a href="">About</a></li>
+            <ul id="nav">
+                <li><a href="">home</a></li>
+                <li><a href="">band</a></li>
+                <li><a href="">tour</a></li>
+                <li><a href="">contact</a></li>
+                <li>
+                    <a href="#">more</a>
+                    <ul class="subnav">
+                        <li><a href="">Merchandise</a></li>
+                        <li><a href="">Extras</a></li>
+                        <li><a href="">Media</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
-    <main>
-        <div id="hero">
-            <div id="hero-content">
-                <h1>Joe's Travel Page</h1>
-                <p>Let's explore the world together!</p>
-                <a href="/places.html">Discover places</a>
-            </div>
-        </div>
 
-        <div id="highlights">
-            <h2>Highlights</h2>
-            <ul id="destinations-ul">
-                <li class="destinations">
-                    <img src="/acssets/img/cities/miami.jpg" alt="Miami streets on sunny day">
-                    <p>Miami <strong>USA</strong></p>
-                </li>
-                <li class="destinations">
-                    <img src="/acssets/img/cities/munich.jpg" alt="Munich stadium in winter">
-                    <p>Munich <strong>Germany</strong></p>
-                </li>
-                <li class="destinations">
-                    <img src="/acssets/img/cities/barcelona.jpg" alt="Palm beach in Barcelona">
-                    <p>Barcelona <strong>Spain</strong></p>
-                </li>
-            </ul>
-        </div>
+    <div id="slider">
 
-    </main>
+    </div>
+
+    <div id="content">
+
+    </div>
+
     <footer>
-        <ul>
-            <li>
-                <a href="https://www.instagram.com/quangbach.1709/"><img src="/acssets/img/icons/insta.png" alt="instagram logo"></a>
 
-            </li>
-            <li>
-                <a href="https://www.facebook.com/bach.quang2004"><img src="/acssets/img/icons/facebook.png" alt="facebook logo"></a>
-            </li>
-        </ul>
     </footer>
+</div>
 </body>
 </html>
