--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
 <body>
 <div id="main">
@@ -18,7 +19,10 @@
                 <li><a href="">tour</a></li>
                 <li><a href="">contact</a></li>
                 <li>
-                    <a href="#">more</a>
+                    <a href="#">
+                        more
+                        <i class="nav-dow ti-angle-down"></i>
+                    </a>
                     <ul class="subnav">
                         <li><a href="">Merchandise</a></li>
                         <li><a href="">Extras</a></li>
@@ -27,14 +31,22 @@
                 </li>
             </ul>
         </nav>
+        <div class="search-btn">
+            <i class="search-icon ti-search"></i>
+        </div>
     </header>
 
     <div id="slider">
-
+        <div class="text-content">
+            <div class="text-header">New York</div>
+            <div class="text-description">Thank you, Chicago - A night we won't forget.</div>
+        </div>
     </div>
 
     <div id="content">
-
+        <h1>
+            TEST git
+        </h1>
     </div>
 
     <footer>
