hoan thanh place

--- a/index.html
+++ b/index.html
@@ -57,26 +57,81 @@
                 adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                 veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
-
+            <div class="member-list">
+                <div class="member-item">
+                    <p class="member-name">Name</p>
+                    <img alt="" class="member-img" src="./assets/img/bandmember.jpg">
+                </div>
+                <div class="member-item">
+                    <p class="member-name">Name</p>
+                    <img alt="" class="member-img" src="./assets/img/bandmember.jpg">
+                </div>
+                <div class="member-item">
+                    <p class="member-name">Name</p>
+                    <img alt="" class="member-img" src="./assets/img/bandmember.jpg">
+                </div>
+                <div class="clear"></div>
+            </div>
         </div>
         <!--        Tour section-->
-        <div class="content-section">
-            <h2 class="section-header">Tour Dates</h2>
-            <p class="section-sub-heading">Remember to book your tickets!</p>
+        <div class="tour-section">
+            <div class="content-section text-white">
+                <h2 class="section-header text-white">Tour Dates</h2>
+                <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+                <!--Ticket-->
+                <ul class="tickets-list">
+                    <li>September <span class="sould-out">Sold out</span></li>
+                    <li>October <span class="sould-out">Sold out</span></li>
+                    <li>November <span class="quantity">4</span></li>
+                </ul>
+                <!--Places-->
+                <div class="places-list">
+                    <div class="place-item">
+                        <img alt="" class="place-img" src="./assets/img/places/newyork.jpg">
+                        <div class="place-body">
+                            <h3 class="place-heading">New York</h3>
+                            <p class="place-time">Fri 27 Nov 2016</p>
+                            <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                            <a class="place-buy-btn" href="#">Buy Tickets</a>
+                        </div>
+                    </div>
+                    <div class="place-item">
+                        <img alt="" class="place-img" src="./assets/img/places/paris.jpg">
+                        <div class="place-body">
+                            <h3 class="place-heading">Paris</h3>
+                            <p class="place-time">Sat 28 Nov 2016</p>
+                            <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                            <a class="place-buy-btn" href="#">Buy Tickets</a>
+                        </div>
+                    </div>
+                    <div class="place-item">
+                        <img alt="" class="place-img" src="./assets/img/places/sanfran.jpg">
+                        <div class="place-body">
+                            <h3 class="place-heading">San Francisco</h3>
+                            <p class="place-time">Sun 29 Nov 2016</p>
+                            <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+
+                            </p>
+                            <a class="place-buy-btn" href="#">Buy Tickets</a>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
 
         </div>
 
         <!--        Contact section-->
-        <div class="content-section">
+        <div class="contact-section">
             <h2 class="section-header">Contact</h2>
             <p class="section-sub-heading">Fan? Drop a note!</p>
-
         </div>
     </div>
 
-    <footer>
 
-    </footer>
 </div>
+<footer>
+
+</footer>
 </body>
 </html>
