--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-    <title>BAND</title>
+    <title>The Band</title>
     <link href="./assets/css/styles.css" rel="stylesheet">
     <link href="./assets/fonts/themify-icons/themify-icons.css" rel="stylesheet">
 </head>
@@ -14,19 +14,19 @@
     <header>
         <nav>
             <ul id="nav">
-                <li><a href="">home</a></li>
-                <li><a href="">band</a></li>
-                <li><a href="">tour</a></li>
-                <li><a href="">contact</a></li>
+                <li><a href="#">home</a></li>
+                <li><a href="#band">band</a></li>
+                <li><a href="#tour">tour</a></li>
+                <li><a href="#contact">contact</a></li>
                 <li>
                     <a href="#">
                         more
                         <i class="nav-dow ti-angle-down"></i>
                     </a>
                     <ul class="subnav">
-                        <li><a href="">Merchandise</a></li>
-                        <li><a href="">Extras</a></li>
-                        <li><a href="">Media</a></li>
+                        <li><a href="#">Merchandise</a></li>
+                        <li><a href="#">Extras</a></li>
+                        <li><a href="#">Media</a></li>
                     </ul>
                 </li>
             </ul>
@@ -45,7 +45,7 @@
 
     <div id="content">
         <!--        About section-->
-        <div class="content-section">
+        <div class="content-section" id="band">
             <h2 class="section-header">The band</h2>
             <p class="section-sub-heading">We love music</p>
             <p class="about-text">
@@ -57,24 +57,24 @@
                 adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                 veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
-            <div class="member-list">
-                <div class="member-item">
+            <div class="row member-list">
+                <div class="column-third column text-center">
                     <p class="member-name">Name</p>
                     <img alt="" class="member-img" src="./assets/img/bandmember.jpg">
                 </div>
-                <div class="member-item">
+                <div class="column-third column text-center">
                     <p class="member-name">Name</p>
                     <img alt="" class="member-img" src="./assets/img/bandmember.jpg">
                 </div>
-                <div class="member-item">
+                <div class="column-third column text-center">
                     <p class="member-name">Name</p>
                     <img alt="" class="member-img" src="./assets/img/bandmember.jpg">
                 </div>
-                <div class="clear"></div>
+
             </div>
         </div>
         <!--        Tour section-->
-        <div class="tour-section">
+        <div class="tour-section" id="tour">
             <div class="content-section text-white">
                 <h2 class="section-header text-white">Tour Dates</h2>
                 <p class="section-sub-heading text-white">Remember to book your tickets!</p>
@@ -85,26 +85,26 @@
                     <li>November <span class="quantity">4</span></li>
                 </ul>
                 <!--Places-->
-                <div class="places-list">
-                    <div class="place-item">
+                <div class="row places-list">
+                    <div class="place-item column column-third">
                         <img alt="" class="place-img" src="./assets/img/places/newyork.jpg">
                         <div class="place-body">
                             <h3 class="place-heading">New York</h3>
                             <p class="place-time">Fri 27 Nov 2016</p>
                             <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button class="place-buy-btn js-buy-ticket">Buy Tickets</button>
+                            <button class="btn js-buy-ticket">Buy Tickets</button>
                         </div>
                     </div>
-                    <div class="place-item">
+                    <div class="place-item column column-third">
                         <img alt="" class="place-img" src="./assets/img/places/paris.jpg">
                         <div class="place-body">
                             <h3 class="place-heading">Paris</h3>
                             <p class="place-time">Sat 28 Nov 2016</p>
                             <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button class="place-buy-btn js-buy-ticket">Buy Tickets</button>
+                            <button class="btn js-buy-ticket">Buy Tickets</button>
                         </div>
                     </div>
-                    <div class="place-item">
+                    <div class="place-item column column-third">
                         <img alt="" class="place-img" src="./assets/img/places/sanfran.jpg">
                         <div class="place-body">
                             <h3 class="place-heading">San Francisco</h3>
@@ -112,24 +112,54 @@
                             <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.
 
                             </p>
-                            <button class="place-buy-btn js-buy-ticket">Buy Tickets</button>
+                            <button class="btn js-buy-ticket">Buy Tickets</button>
                         </div>
                     </div>
-                    <div class="clear"></div>
+
                 </div>
             </div>
 
         </div>
 
         <!--        Contact section-->
-        <div class="contact-section">
+        <div class="content-section" id="contact">
             <h2 class="section-header">Contact</h2>
             <p class="section-sub-heading">Fan? Drop a note!</p>
+            <div class="row contact-content">
+                <div class="column column-half contact-info">
+                    <p><i class="ti-location-pin"></i>Chicago, US</p>
+                    <p><i class="ti-mobile"></i> Phone: +00 151515</p>
+                    <p><i class="ti-email"></i>Email: mail@mail.com</p>
+                </div>
+                <div class="column column-half contact-form">
+                    <form action="">
+                        <div class="row">
+                            <div class="column column-half">
+                                <input class="form-control" placeholder="Name" required type="text">
+                            </div>
+                            <div class="column column-half">
+                                <input class="form-control" placeholder="Email" required type="email">
+                            </div>
+
+                        </div>
+                        <div class="row mt-8">
+                            <div class="column column-full">
+                                <input class="form-control" placeholder="Messenger" required type="text">
+                            </div>
+                        </div>
+                        <input class="mt-16 btn full-right" type="submit" value="SEND">
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="map-section">
+            <img alt="" src="./assets/img/map.jpg">
         </div>
     </div>
 
 
 </div>
+<!--From hien thi dat ve-->
 <div class="modal js-modal">
     <div class="modal-container js-modal-container">
         <div class="modal-close js-modal-close">
@@ -164,7 +194,15 @@
     </div>
 </div>
 <footer>
-
+    <div class="socials-list">
+        <a href="https://www.facebook.com/bach.quang2004/"><i class="ti-facebook"></i></a>
+        <a href="https://www.instagram.com/quangbach.1709/"><i class="ti-instagram"></i></a>
+        <a href=""><i class="ti-pinterest"></i></a>
+        <a href=""><i class="ti-linkedin"></i></a>
+        <a href=""><i class="ti-twitter"></i></a>
+        <a href="https://www.youtube.com/@tqb2k4"><i class="ti-youtube"></i></a>
+    </div>
+    <p class="copy-right">Powered by <a href="">F8</a></p>
 </footer>
 
 <script>
