responsive mobile and fix UX

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                 veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
             <div class="row member-list">
-                <div class="column-third column text-center">
+                <div class="column-third column text-center s-column-full mt-32">
                     <p class="member-name">Name</p>
                     <img alt="" class="member-img" src="./assets/img/bandmember.jpg">
                 </div>
-                <div class="column-third column text-center">
+                <div class="column-third column text-center s-column-full mt-32">
                     <p class="member-name">Name</p>
                     <img alt="" class="member-img" src="./assets/img/bandmember.jpg">
                 </div>
-                <div class="column-third column text-center">
+                <div class="column-third column text-center s-column-full mt-32">
                     <p class="member-name">Name</p>
                     <img alt="" class="member-img" src="./assets/img/bandmember.jpg">
                 </div>
@@ -90,25 +90,25 @@
                 </ul>
                 <!--Places-->
                 <div class="row places-list">
-                    <div class="place-item column column-third">
+                    <div class="place-item column column-third mt-16 s-column-full">
                         <img alt="" class="place-img" src="./assets/img/places/newyork.jpg">
                         <div class="place-body">
                             <h3 class="place-heading">New York</h3>
                             <p class="place-time">Fri 27 Nov 2016</p>
                             <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button class="btn js-buy-ticket">Buy Tickets</button>
+                            <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                         </div>
                     </div>
-                    <div class="place-item column column-third">
+                    <div class="place-item column column-third mt-16 s-column-full">
                         <img alt="" class="place-img" src="./assets/img/places/paris.jpg">
                         <div class="place-body">
                             <h3 class="place-heading">Paris</h3>
                             <p class="place-time">Sat 28 Nov 2016</p>
                             <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button class="btn js-buy-ticket">Buy Tickets</button>
+                            <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                         </div>
                     </div>
-                    <div class="place-item column column-third">
+                    <div class="place-item column column-third mt-16 s-column-full">
                         <img alt="" class="place-img" src="./assets/img/places/sanfran.jpg">
                         <div class="place-body">
                             <h3 class="place-heading">San Francisco</h3>
@@ -116,7 +116,7 @@
                             <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.
 
                             </p>
-                            <button class="btn js-buy-ticket">Buy Tickets</button>
+                            <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                         </div>
                     </div>
 
@@ -130,18 +130,18 @@
             <h2 class="section-header">Contact</h2>
             <p class="section-sub-heading">Fan? Drop a note!</p>
             <div class="row contact-content">
-                <div class="column column-half contact-info">
+                <div class="column column-half s-column-full contact-info">
                     <p><i class="ti-location-pin"></i>Chicago, US</p>
-                    <p><i class="ti-mobile"></i> Phone: +00 151515</p>
-                    <p><i class="ti-email"></i>Email: mail@mail.com</p>
+                    <p><i class="ti-mobile"></i> Phone: <a href="tel:0984344058">0984344058</a></p>
+                    <p><i class="ti-email"></i>Email: <a href="mailto:bachh1124@gmail.com">bachh1124@gmail.com</a></p>
                 </div>
-                <div class="column column-half contact-form">
+                <div class="column column-half s-column-full contact-form">
                     <form action="">
                         <div class="row">
-                            <div class="column column-half">
+                            <div class="column column-half s-column-full s-mt-8">
                                 <input class="form-control" placeholder="Name" required type="text">
                             </div>
-                            <div class="column column-half">
+                            <div class="column column-half s-column-full s-mt-8">
                                 <input class="form-control" placeholder="Email" required type="email">
                             </div>
 
@@ -151,7 +151,7 @@
                                 <input class="form-control" placeholder="Messenger" required type="text">
                             </div>
                         </div>
-                        <input class="mt-16 btn full-right" type="submit" value="SEND">
+                        <input class="mt-16 btn full-right s-full-width" type="submit" value="SEND">
                     </form>
                 </div>
             </div>
